Small font size change on mobile to try fixing padding

--- a/analh/posts/styles/i-got-p-The-Math-Behind-RotMGs-Puzzle.css
+++ b/analh/posts/styles/i-got-p-The-Math-Behind-RotMGs-Puzzle.css
@@ -1,7 +1,7 @@
 html {
 	background-color: #fff0db;
 	font-family: "Open Sans", sans-serif;
-	font-size: 16px;
+	font-size: 15px;
 }
 
 img,
@@ -23,8 +23,8 @@ a.homebutton {
 }
 
 .container {
-	padding-right: 16px;
-	padding-left: 16px;
+	padding-right: 15px;
+	padding-left: 15px;
 	margin-right: auto;
 	margin-left: auto;
 }
@@ -148,6 +148,9 @@ a:active {
 }
 
 @media screen and (min-width: 1024px) {
+	html {
+		font-size: 16px;
+	}
 	.container {
 		max-width: 800px;
 		padding-right: 24px;
